<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dutymator</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_name">Settings</string>
    <string name="schedule_button">Schedule!</string>
    <string name="menu_log">Log</string>
    <string name="log_name">Log</string>
    <string name="calendar_desc">Calendar to use.</string>
    <string name="calendar">Calendar</string>
    <string name="menu_clear">Clear log</string>
    <string name="stop_button">Stop</string>
    <string name="all_day_from">From time</string>
    <string name="all_day_to">To time</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="schedule_interval">Scheduling interval</string>
    <string name="dry_run">Dry run</string>
    <string name="menu_login">Login</string>
    <string name="verbose_log">Verbose logging</string>
    <string name="login_name">Login</string>
    <string name="api_url">Api url</string>
</resources>
