<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="calendar_id"
        android:title="@string/calendar"
        android:summary="@string/calendar_desc"
        android:defaultValue=""/>
    <com.dutymator.preference.TimePreference
        android:key="all_day_from"
        android:title="@string/all_day_from"/>
    <com.dutymator.preference.TimePreference
        android:key="all_day_to"
        android:title="@string/all_day_to"/>
    <EditTextPreference
        android:key="schedule_interval"
        android:title="@string/schedule_interval"
        android:inputType="numberDecimal"/>
    <EditTextPreference
        android:key="api_url"
        android:title="@string/api_url"
        android:inputType="textUri"/>
    <CheckBoxPreference
        android:key="dry_run"
        android:title="@string/dry_run"
        android:defaultValue="0"/>
    <CheckBoxPreference
        android:key="verbose_log"
        android:title="@string/verbose_log"
        android:defaultValue="0"/>
</PreferenceScreen>